--- a/package.json
+++ b/package.json
@@ -8,7 +8,45 @@
     "build": "webpack --config build/webpack.prod.js",
     "dev": "node build/server.js",
     "app": "cross-env NODE_ENV=development electron app/",
-    "lint": "xo **/client/**/*.{vue,js} **/app/**/*.js !node_modules/**"
+    "lint": "xo **/client/**/*.{vue,js} **/app/**/*.js !node_modules/**",
+    "packageDarwin": "electron-packager . 'TEST' --platform=darwin --arch=x64 --icon=hosts.icns --out=./package --asar --app-version=2.0.3 --ignore=\"(build|client|static|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules)\"",
+    "packageWin": "electron-packager . 'TEST' --platform=win32 --arch=x64 --icon=hosts.ico --out=./package --asar --app-version=2.0.3 --ignore=\"(build|client|static|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules)\"",
+    "packageLinux": "electron-packager . 'TEST' --platform=linux --arch=x64 --out=./package --asar --app-version=2.0.3 --ignore=\"(build|client|static|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules)\"",
+    "package": "npm run packageDarwin && npm run packageWin && npm run packageLinux"
+  },
+  "author": "Howard.Zuo",
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-component": "^0.9.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^3.4.0",
+    "css-loader": "^0.28.2",
+    "electron-packager": "^8.7.0",
+    "electron-prebuilt": "^1.4.13",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "postcss-loader": "^2.0.5",
+    "postcss-nested": "^2.0.2",
+    "postcss-simple-vars": "^4.0.0",
+    "style-loader": "^0.18.1",
+    "vue-hot-reload-api": "^2.1.0",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^12.1.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "element-ui": "^1.3.4",
+    "hostile": "^1.3.0",
+    "sudo-prompt": "^7.0.0",
+    "vue": "^2.3.3"
   },
   "author": "xiaobinwu <xiaobin_wu@yahoo.com>",
   "license": "MIT",
@@ -48,11 +86,8 @@
     "vuex-router-sync": "^4.0.0"
   },
   "devDependencies": {
-    "setimmediate": "^1.0.5",
-    "strip-ansi": "^3.0.1",    
     "ansi-html": "0.0.7",
-    "ansi-regex": "^2.1.1",   
-    "html-entities": "^1.2.1", 
+    "ansi-regex": "^2.1.1",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.4",
@@ -63,6 +98,7 @@
     "css-loader": "^0.23.1",
     "electron": "^1.4.2",
     "electron-devtools-installer": "^2.0.1",
+    "electron-packager": "^8.7.1",
     "eslint": "^3.19.0",
     "eslint-config-vue": "latest",
     "eslint-plugin-vue": "latest",
@@ -70,12 +106,15 @@
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.1.2",
+    "html-entities": "^1.2.1",
     "html-webpack-plugin": "^2.22.0",
     "offline-plugin": "^4.5.3",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
+    "setimmediate": "^1.0.5",
+    "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^3.0.1",
