--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "license": "MIT",
   "author": "xiaobinwu <xiaobin_wu@yahoo.com>",
-  "license": "MIT",
   "xo": {
     "extends": "./.eslintrc",
     "esnext": true,
@@ -72,11 +71,14 @@
     "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.1.2",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^4.5.3",
     "offline-plugin": "^4.5.3",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
+    "sass": "^1.0.0-beta.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^3.0.1",
