'解决webpack引入字体文件问题'

--- a/package.json
+++ b/package.json
@@ -75,11 +75,11 @@
     "offline-plugin": "^4.5.3",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
-    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "sass": "^1.0.0-beta.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.9",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
