--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
           "useBuiltIns": true
         }
       ]
-    ]
+    ],
+    "plugins": [["component", [
+        {
+          "libraryName": "element-ui",
+          "styleLibraryName": "~theme"
+        }
+    ]]]
   },
   "postcss": {
     "plugins": {
@@ -45,6 +51,7 @@
   ],
   "dependencies": {
     "babel-runtime": "^6.18.0",
+    "element-ui": "^1.3.7",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.2.0",
     "vue-router": "^2.0.0",
@@ -55,6 +62,7 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-component": "^0.9.1",
     "babel-preset-vue-app": "^1.1.1",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
