--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
+    "file-saver": "^1.3.3",
     "friendly-errors-webpack-plugin": "^1.1.2",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^4.5.3",
@@ -101,6 +102,7 @@
     "webpack": "2.2.0",
     "webpack-dev-middleware": "^1.8.1",
     "webpack-hot-middleware": "^2.12.2",
+    "xlsx": "^0.11.1",
     "xo": "^0.18.0"
   }
 }
