--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "app": "cross-env NODE_ENV=development electron app/",
     "lint": "xo **/client/**/*.{vue,js} **/app/**/*.js !node_modules/**",
     "package:mac": "rimraf package && electron-packager . TEST --platform=darwin --arch=x64 --overwrite --icon=hosts.icns --out=./package --electron-version=1.6.11 --ignore=\"(build|client$|static|theme|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules|gruntPackage.json|Gruntfile.js|yarn.lock|socket|package_dir)\"",
-    "package:win": "rimraf package && electron-packager . TEST --platform=win32 --arch=x64 --overwrite --icon=hosts.ico --out=./package --electron-version=1.6.11 --ignore=\"(build|client$|static|theme|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules|gruntPackage.json|Gruntfile.js|yarn.lock|socket|package_dir)\"",
+    "package:win": "rimraf package && electron-packager . TEST --platform=win32 --arch=x64 --overwrite --icon=hosts.ico --out=./package --electron-version=1.6.11 --version-string.CompanyName=TEST --version-string.ProductName=TEST --ignore=\"(build|client$|static|theme|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules|gruntPackage.json|Gruntfile.js|yarn.lock|socket|package_dir)\"",
     "package:linux": "electron-packager . TEST --platform=linux --arch=x64 --overwrite --out=/package --electron-version=1.6.11 --asar --ignore=\"(build|client|static|theme|.gitignore|LICENSE|README.md|.editorconfig|.eslintrc|node_modules|gruntPackage.json|Gruntfile.js|yarn.lock|socket|package_dir)\"",
     "package": "npm run packageDarwin && npm run packageWin && npm run packageLinux",
     "setup": "rimraf package_dir && grunt",
