--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "rimraf": "^2.6.1",
     "sass": "^1.0.0-beta.1",
     "sass-loader": "^6.0.6",
+    "socket.io-client": "^2.0.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.9",
     "vue-i18n": "^7.1.1",
