--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-component": "^0.9.1",
     "babel-preset-vue-app": "^1.1.1",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^2.0.0",
