--- a/socket/package.json
+++ b/socket/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
+    "multiparty": "^4.1.3",
     "socket.io": "^2.0.3"
   }
 }
